# LLM

./: .gitignore
GEMM_Kernel_Migration/gemm_migration_experiment/: .gitignore  README.md
GEMM_Kernel_Migration/gemm_migration_experiment/configs/: experiment_matrix.yaml  hardware.yaml  models.yaml  shapes_correctness.json  shapes_correctness_audit.json  shapes_fp16.json  shapes_performance.json
GEMM_Kernel_Migration/gemm_migration_experiment/harness/: CMakeLists.txt
GEMM_Kernel_Migration/gemm_migration_experiment/harness/include/: check_utils.cuh  gemm_common.cuh  timer.cuh
GEMM_Kernel_Migration/gemm_migration_experiment/harness/runner/: cublas_reference.cu  main.cpp
GEMM_Kernel_Migration/gemm_migration_experiment/prompts/: p0_no_hw_hint.md  p1_target_name_only.md  p2_hw_feature_table.md  p3_target_example.md  p4_hopper_compile_safe.md  p5_hopper_feature_probe.md  p6_kernelwiki_hopper_audit_safe.md  p7_kernelwiki_hopper_feature_evidence.md  prompt_metadata.yaml
GEMM_Kernel_Migration/gemm_migration_experiment/scripts/: 00_prepare_cases.py  01_generate_llm.py  02_extract_code.py  03_build_kernel.py  04_run_correctness.py  05_run_performance.py  06_static_feature_check.py  07_sass_feature_check.py  (+5 more)
KernalBench/: .env.example  README.md  pyproject.toml  requirements.txt
KernalBench/reports/: h100_iterative_oscillation_report_zh.md  kernelbench_local_run_report.md
KernalBench/scripts/: analyze_iterative_convergence.py  benchmark_eval_analysis.py  evaluate_kernel_once.py  generate_and_eval_single_sample.py  run_and_check.py  run_iterative_convergence.py
(+34 files in other folders)
